--- a/src/components/Card/card.module.css
+++ b/src/components/Card/card.module.css
@@ -3,8 +3,8 @@
     height: auto;
     border: 2px solid black;
     border-radius: 5px;
-    margin-top: 10px;
-    margin-bottom: 5px;
+    /* margin-top: 10px;
+    margin-bottom: 5px; */
     text-align: center;
     justify-content: center;
     /* overflow: hidden; */
@@ -18,16 +18,17 @@
     .datos {
         display: inline-block;
         /* margin: auto; */
-        font-size: 22px;
+        font-size: auto;
         width: 100px;
         height: 25px;
         max-width: 100%;
-        max-height: auto;
+        /* max-height: auto; */
         color: white;
         margin: 5%;
         background-color: #0f0c21;
         border-radius: 10%;
         box-shadow: 0 0 10px 5px #9fff02;
+        text-align: center;
     }
     .nombre {
         font-size: 25px;
@@ -64,7 +65,12 @@
         max-width: 100%;
         max-height: auto;
         box-shadow: 0 0 8px 2px #e5c1f0;
+    }
+    .corazon {
+        background-color: #2b213c;
+        border: none;
+        font-size: 20px;
 
-}
+    }
 
 }
