--- a/src/components/Form/form.module.css
+++ b/src/components/Form/form.module.css
@@ -7,11 +7,11 @@
     align-items: center;
     align-content: center;
     background-image: url("../../Imagenes/924300.png");
-    background-size:auto;
+    background-size: cover;
     background-repeat: no-repeat;
-    /* height: 100%;
+    height: 100%;
     width: 100%;
-    margin:0%; */
+    margin:0%;
     .boton {
         margin-bottom: 100px;
         background-color: #0a0d20 ;
@@ -48,7 +48,7 @@
 
 .logoinicio {
     width: 18%;
-    margin: 40px;
+    margin: 15px;
 
 }
 
