--- a/src/components/NavBar/nav.module.css
+++ b/src/components/NavBar/nav.module.css
@@ -1,31 +1,45 @@
 .navbarra {
-    display: flex;
+    /* display: flex;
     align-content: center;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    flex-wrap: nowrap;
-    
+    flex-wrap: nowrap; */
 }
 
 .contenedor {
     background: linear-gradient(to right, #0a0d20, #ab79b5,#0a0d20);
     display: flex;
     align-content: center;
-    justify-content: space-between;
+    justify-content:center;
     align-items: center;
     flex-direction: row;
     flex-wrap: nowrap;
-    gap: 8%;
+    gap: 10%;
     width: 100%;
-    height: 150px;
+    height: auto;
 
 }
 
-.contenedor img {
-    width: 215px;
+.contenedor2 {
+    background: linear-gradient(to right, #0a0d20, #ab79b5,#0a0d20);
+    display: flex;
+    align-content: center;
+    justify-content:center;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    gap: 10%;
+    width: 100%;
     height: auto;
-    margin: 10px;
+}
+
+
+
+.contenedor img {
+    width: 220px;
+    height: auto;
+    /* margin: 10px; */
     max-width: 100%;
 }
 
@@ -48,7 +62,7 @@
     background-color: #0a0d20 ;
     color: white;
     box-shadow: 0 0 10px 5px #9fff02;
-    width: 200%;
+    width: auto;
     max-width: 250%;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 20px;
@@ -57,4 +71,17 @@
     border-radius: 5%;
     text-align: center;
     margin-left: 20px;
+}
+
+.botonut {
+    background-color: red ;
+    color: white;
+    box-shadow: 0 0 10px 5px red;
+    width: 200%;
+    max-width: 250%;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 20px;
+    font-weight: lighter;
+    border-radius: 5%;
+    text-align: center;
 }
