--- a/Client/src/components/Favorites/favorites.module.css
+++ b/Client/src/components/Favorites/favorites.module.css
@@ -1,7 +1,4 @@
 
-.contenedor {
-}
-
 .h2 {
     /* background: linear-gradient(to right, #0a0d20, #ab79b5,#0a0d20); */
     margin: 0%;
@@ -15,8 +12,33 @@
     
 }
 
+.contenedor2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 20px;
+    align-items: center;
+    align-content: center;
+    flex-wrap: nowrap;
+}
+
+.label {
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    text-shadow: 4px 4px 2px #0a0d20 ;
+}
+
 .select {
-    
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #9fff02;
+    color: black;
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+    border: solid black 2px;
+    border-radius: 10px;
+
 }
 
 select:hover {
