--- a/Client/src/components/Form/form.module.css
+++ b/Client/src/components/Form/form.module.css
@@ -18,19 +18,24 @@
         color: white;
         box-shadow: 0 0 10px 5px #9fff02;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
-        font-size: 15px;
+        font-size: 20px;
         font-weight: lighter;
         border: none;
         border-radius: 5%;
         width: auto;
         height: 40px;
+        margin-top: 1%;
+    }
+    .boton:hover {
+        cursor: pointer;
     }
     .alerta {
         color: red;
         font-size: 15px;
         font-weight: bolder;
-        margin-top: 2px;
-        margin-bottom: 2px
+        padding: auto;
+        margin: auto;
+        font-weight: bolder;
     }
 }
 
@@ -47,7 +52,7 @@
 
 
 .logoinicio {
-    width: 18%;
+    width: 16%;
     margin: 15px;
 
 }
